added utils.py with build_flickr_photo_urls, making calls to the flickr api and retrieving photos from keywords

--- a/flickr_search/templates/searches/index.html
+++ b/flickr_search/templates/searches/index.html
@@ -26,6 +26,8 @@
 
 <br><br>
 
-{% if flickr_results %}
-{{ flickr_results }}
+{% if flickr_photo_urls %}
+	{%  for photo_url in flickr_photo_urls %}
+		<i>Show photo at: {{ photo_url }}</i><br>
+	{% endfor %}
 {% endif %}
