--- a/flickr_search/templates/searches/index.html
+++ b/flickr_search/templates/searches/index.html
@@ -1,10 +1,8 @@
 {% if latest_search_list %}
-<h3> Popular Searches </h3>
-	<ul>
+<h3> Popular Searches: </h3>
 {% for search in latest_search_list %}
-	<li><a href="results/{{ search.keywords }}/">{{ search.keywords }}</a></li>
+	<a href="results/{{ search.keywords }}/">{{ search.keywords }}</a>
 {% endfor %}
-</ul>
 {% else %}
 	<p>No searches are available.</p>
 {% endif %}
