Going to add some css to jazz it up

--- a/flickr_search/templates/searches/index.html
+++ b/flickr_search/templates/searches/index.html
@@ -31,3 +31,7 @@
 	{% endfor %}
 {% endif %}
 </table>
+<!--
+{% load staticfiles %}
+<img src="{% static "flickr_search/images/Spring 2010-0837.jpg" %}" alt="Sway, Copyright Manas Karekar" />
+-->
